avi_hol_files/avimart_demo/vDefend/order-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-svc
  namespace: avimart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
        tier: app
    spec:
      containers:
      - name: order-svc
        image: chrismentjox/avimart:order-svc-v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests: { cpu: 100m, memory: 128Mi }
          limits:   { cpu: 300m, memory: 256Mi }
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: avimart
spec:
  selector:
    app: order-svc
  ports:
  - port: 8080
    targetPort: 8080
