avi_hol_files/avimart_demo/vDefend/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/issuer: vault-issuer-supervisor
    cert-manager.io/common-name: "*.k8s.fqdn.nl"
    cert-manager.io/renew-before: "24h"
  name: chris-tkg-gateway
  namespace: default
spec:
  gatewayClassName: avi-lb
  listeners:
  - name: foo-http
    protocol: HTTP
    port: 80
    hostname: "*.k8s.fqdn.nl"
    allowedRoutes:
      namespaces:
        from: All
  - name: foo-https
    protocol: HTTPS
    port: 443
    hostname: "*.k8s.fqdn.nl"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: gw1.k8s.fqdn.nl
